--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
     <img
       src="./corner.png"
       alt="artwork"
-      class="hidden lg:block fixed bottom-0 right-0 w-[144px]"
+      class="hidden lg:block absolute bottom-0 right-0 lg:w-[96px] xl:w-[144px]"
     />
 
     <script>
