--- a/index.html
+++ b/index.html
@@ -593,12 +593,12 @@
           </div>
           <button
             id="updateButton"
-            class="z-20 w-full px-4 py-4 lg:py-3 bg-indigo-500 rounded lg:rounded-xl text-white font-bold text-lg"
+            class="z-10 w-full px-4 py-4 lg:py-3 bg-indigo-500 rounded lg:rounded-xl text-white font-bold text-lg"
           >
             Update
           </button>
           <a
-            class="text-indigo-500 text-xs font-bold flex flex-row items-center justify-center"
+            class="hidden lg:flex text-indigo-500 text-xs font-bold flex-row items-center justify-center"
             href="#"
             >View Help Docs
             <span
