--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="relative">
     <nav
       class="fixed bottom-0 lg:top-0 inset-x-0 lg:inset-x-[auto] w-full lg:w-fit lg:h-full bg-white py-4 lg:py-4 lg:px-3 z-10 flex lg:flex-col lg:items-center lg:justify-center"
     >
